add_subdirectory(analyser)
add_subdirectory(base)
add_subdirectory(classes)
add_subdirectory(data)
add_subdirectory(expression)
add_subdirectory(items)
add_subdirectory(kernels)
add_subdirectory(keywords)
add_subdirectory(io)
add_subdirectory(main)
add_subdirectory(math)
add_subdirectory(module)
add_subdirectory(procedure)
add_subdirectory(neta)

if(GUI)
  add_subdirectory(gui)
endif(GUI)

if(QML_GUI)
  add_subdirectory(gui)
  add_subdirectory(qml-gui)
endif(QML_GUI)

add_subdirectory(modules)
