add_library(base
  enumoption.cpp
  enumoptionsbase.cpp
  enumoptionslist.cpp
  geometry.cpp
  lineparser.cpp
  lock.cpp
  messenger.cpp
  outputhandler.cpp
  parameters.cpp
  processgroup.cpp
  processpool.cpp
  sysfunc.cpp
  timer.cpp
  units.cpp
  version.cpp
  
  enumoption.h
  enumoptionsbase.h
  enumoptions.h
  enumoptionslist.h
  geometry.h
  lineparser.h
  lock.h
  messenger.h
  outputhandler.h
  parameters.h
  processgroup.h
  processpool.h
  sysfunc.h
  timer.h
  units.h
  version.h
)

include_directories(
../
${CMAKE_SOURCE_DIR}
${CMAKE_BINARY_DIR}
${CMAKE_BINARY_DIR}/src
)
