noinst_LTLIBRARIES = libbase.la

libbase_la_SOURCES = charstring.cpp genericitem.cpp genericitembase.cpp genericlist.cpp geometry.cpp lineparser.cpp messenger.cpp outputhandler.cpp parameters.cpp plainvalue.cpp plainvaluelist.cpp processgroup.cpp processpool.cpp sysfunc.cpp timer.cpp

noinst_HEADERS = charstring.h constants.h dummyclass.h genericitem.h genericitembase.h genericlist.h geometry.h lineparser.h messenger.h outputhandler.h parameters.h plainvalue.h plainvaluelist.h processgroup.h processpool.h sysfunc.h timer.h

AM_CPPFLAGS = -I../ @DISSOLVE_CFLAGS@

