noinst_LTLIBRARIES = libbase.la

libbase_la_SOURCES = charstring.cpp charstringlist.cpp
libbase_la_SOURCES += enumoptions.cpp
libbase_la_SOURCES += fileandformat.cpp
libbase_la_SOURCES += geometry.cpp
libbase_la_SOURCES += lineparser.cpp
libbase_la_SOURCES += messenger.cpp
libbase_la_SOURCES += outputhandler.cpp
libbase_la_SOURCES += parameters.cpp plainvalue.cpp plainvaluelist.cpp processgroup.cpp processpool.cpp
libbase_la_SOURCES += sysfunc.cpp
libbase_la_SOURCES += timer.cpp
libbase_la_SOURCES += version.cpp

noinst_HEADERS = charstring.h charstringlist.h
noinst_HEADERS += enumoptions.h
noinst_HEADERS += dummyclass.h
noinst_HEADERS += fileandformat.h
noinst_HEADERS += geometry.h
noinst_HEADERS += lineparser.h
noinst_HEADERS += messenger.h
noinst_HEADERS += outputhandler.h
noinst_HEADERS += parameters.h plainvalue.h plainvaluelist.h processgroup.h processpool.h
noinst_HEADERS += sysfunc.h
noinst_HEADERS += timer.h
noinst_HEADERS += version.h 

AM_CPPFLAGS = -I../ @DISSOLVE_CFLAGS@

