add_library(
  classes
  atom.cpp
  atomchangetoken.cpp
  atomtype.cpp
  atomtypedata.cpp
  atomtypemix.cpp
  box.cpp
  box_cubic.cpp
  box_monoclinicalpha.cpp
  box_monoclinicbeta.cpp
  box_monoclinicgamma.cpp
  box_nonperiodic.cpp
  box_orthorhombic.cpp
  box_singleimage.cpp
  box_triclinic.cpp
  braggreflection.cpp
  cell.cpp
  cellarray.cpp
  celldistributor.cpp
  changedata.cpp
  changestore.cpp
  configuration.cpp
  configuration_box.cpp
  configuration_contents.cpp
  configuration_io.cpp
  configuration_sites.cpp
  configuration_upkeep.cpp
  coredata.cpp
  data1dstore.cpp
  data2dstore.cpp
  data3dstore.cpp
  distributor.cpp
  energykernel.cpp
  forcekernel.cpp
  isotopedata.cpp
  isotopologue.cpp
  isotopologues.cpp
  isotopologueset.cpp
  isotopologueweight.cpp
  kvector.cpp
  molecule.cpp
  moleculedistributor.cpp
  neutronweights.cpp
  pairpotential.cpp
  potentialmap.cpp
  pair_iter.cpp
  partialset.cpp
  partialsetaccumulator.cpp
  region.cpp
  regionaldistributor.cpp
  scaledenergykernel.cpp
  scatteringmatrix.cpp
  site.cpp
  sitereference.cpp
  sitestack.cpp
  speciesangle.cpp
  speciesatom.cpp
  speciesbond.cpp
  species.cpp
  species_atomic.cpp
  species_ff.cpp
  species_intra.cpp
  species_io.cpp
  species_isotopologues.cpp
  species_site.cpp
  species_transform.cpp
  speciesimproper.cpp
  speciesring.cpp
  speciessite.cpp
  speciestorsion.cpp
  valuestore.cpp
  xrayweights.cpp
  atom.h
  atomtypedata.h
  atomtype.h
  atomtypemix.h
  box.h
  braggreflection.h
  cell.h
  cellarray.h
  celldistributor.h
  changedata.h
  changestore.h
  configuration.h
  coredata.h
  data1dstore.h
  data2dstore.h
  data3dstore.h
  distributor.h
  empiricalformula.h
  energykernel.h
  forcekernel.h
  interactionpotential.h
  isotopedata.h
  isotopologue.h
  isotopologues.h
  isotopologueset.h
  isotopologueweight.h
  kernelflags.h
  kvector.h
  molecule.h
  moleculedistributor.h
  neutronweights.h
  pairpotential.h
  potentialmap.h
  partialset.h
  partialsetaccumulator.h
  referencepoint.h
  region.h
  regionaldistributor.h
  scaledenergykernel.h
  scatteringmatrix.h
  site.h
  sitereference.h
  sitestack.h
  species.h
  speciesangle.h
  speciesatom.h
  speciesbond.h
  speciesimproper.h
  speciesintra.h
  speciesring.h
  speciessite.h
  speciestorsion.h
  valuestore.h
  xrayweights.h
)

include_directories(classes PRIVATE ${PROJECT_SOURCE_DIR}/src)
target_link_libraries(classes PRIVATE base ${THREADING_LINK_LIBS})
