add_library(
  classes
  array3DIterator.cpp
  atom.cpp
  atomType.cpp
  atomTypeData.cpp
  atomTypeMix.cpp
  box.cpp
  boxCubic.cpp
  boxMonoclinicAlpha.cpp
  boxMonoclinicBeta.cpp
  boxMonoclinicGamma.cpp
  boxNonPeriodic.cpp
  boxOrthorhombic.cpp
  boxSingleImage.cpp
  boxTriclinic.cpp
  braggReflection.cpp
  cell.cpp
  cellArray.cpp
  cellDistributor.cpp
  changeData.cpp
  changeStore.cpp
  configuration.cpp
  configuration_box.cpp
  configuration_contents.cpp
  configuration_io.cpp
  configuration_potentials.cpp
  configuration_sites.cpp
  configuration_upkeep.cpp
  coreData.cpp
  dataSource.cpp
  distributor.cpp
  empiricalFormula.cpp
  isotopeData.cpp
  isotopologue.cpp
  isotopologues.cpp
  isotopologueSet.cpp
  isotopologueWeight.cpp
  kVector.cpp
  molecule.cpp
  moleculeDistributor.cpp
  neutronWeights.cpp
  pairPotential.cpp
  potentialMap.cpp
  pairIterator.cpp
  partialSet.cpp
  partialSetAccumulator.cpp
  region.cpp
  regionalDistributor.cpp
  scatteringMatrix.cpp
  site.cpp
  siteReference.cpp
  siteStack.cpp
  speciesAngle.cpp
  speciesAtom.cpp
  speciesBond.cpp
  species.cpp
  species_atomic.cpp
  species_ff.cpp
  species_intra.cpp
  species_io.cpp
  species_isotopologues.cpp
  species_site.cpp
  species_transform.cpp
  speciesImproper.cpp
  speciesRing.cpp
  speciesSite.cpp
  speciesTorsion.cpp
  valueStore.cpp
  xRayWeights.cpp
  array3DIterator.h
  atom.h
  atomTypeData.h
  atomType.h
  atomTypeMix.h
  box.h
  braggReflection.h
  cell.h
  cellArray.h
  cellDistributor.h
  changeData.h
  changeStore.h
  configuration.h
  coreData.h
  dataSource.h
  distributor.h
  empiricalFormula.h
  interactionPotential.h
  isotopeData.h
  isotopologue.h
  isotopologues.h
  isotopologueSet.h
  isotopologueWeight.h
  kVector.h
  molecule.h
  moleculeDistributor.h
  neutronWeights.h
  pairPotential.h
  potentialMap.h
  partialSet.h
  partialSetAccumulator.h
  region.h
  regionalDistributor.h
  scatteringMatrix.h
  site.h
  siteReference.h
  siteStack.h
  species.h
  speciesAngle.h
  speciesAtom.h
  speciesBond.h
  speciesImproper.h
  speciesIntra.h
  speciesRing.h
  speciesSite.h
  speciesTorsion.h
  valueStore.h
  xRayWeights.h
)

target_include_directories(classes PRIVATE ${PROJECT_SOURCE_DIR}/src)
if(CONAN)
  target_link_libraries(classes PUBLIC base ${THREADING_LINK_LIBS})
else(CONAN)
  target_link_libraries(classes PUBLIC base toml11::toml11 ${THREADING_LINK_LIBS})
endif(CONAN)
