add_library(
  classes
  angleFunctions.cpp
  array3DIterator.cpp
  atom.cpp
  atomType.cpp
  atomTypeData.cpp
  atomTypeMix.cpp
  bondFunctions.cpp
  box.cpp
  boxCubic.cpp
  boxMonoclinicAlpha.cpp
  boxMonoclinicBeta.cpp
  boxMonoclinicGamma.cpp
  boxNonPeriodic.cpp
  boxOrthorhombic.cpp
  boxSingleImage.cpp
  boxTriclinic.cpp
  braggReflection.cpp
  cell.cpp
  cellArray.cpp
  cellDistributor.cpp
  changeData.cpp
  changeStore.cpp
  configuration.cpp
  configuration_box.cpp
  configuration_contents.cpp
  configuration_io.cpp
  configuration_potentials.cpp
  configuration_sites.cpp
  configuration_upkeep.cpp
  coreData.cpp
  distributor.cpp
  empiricalFormula.cpp
  isotopeData.cpp
  isotopologue.cpp
  isotopologues.cpp
  isotopologueSet.cpp
  isotopologueWeight.cpp
  kVector.cpp
  localMolecule.cpp
  molecule.cpp
  moleculeDistributor.cpp
  neutronWeights.cpp
  pairPotential.cpp
  pairPotentialOverride.cpp
  potentialMap.cpp
  potentialSet.cpp
  pairIterator.cpp
  partialSet.cpp
  partialSetAccumulator.cpp
  region.cpp
  regionalDistributor.cpp
  scatteringMatrix.cpp
  shortRangeFunctions.cpp
  site.cpp
  siteReference.cpp
  siteStack.cpp
  speciesAngle.cpp
  speciesAtom.cpp
  speciesBond.cpp
  species.cpp
  species_atomic.cpp
  species_ff.cpp
  species_intra.cpp
  species_io.cpp
  species_isotopologues.cpp
  species_site.cpp
  species_transform.cpp
  speciesImproper.cpp
  speciesRing.cpp
  speciesSite.cpp
  speciesSiteInstance.cpp
  speciesTorsion.cpp
  torsionFunctions.cpp
  valueStore.cpp
  xRayWeights.cpp
  angleFunctions.h
  array3DIterator.h
  atom.h
  atomTypeData.h
  atomType.h
  atomTypeMix.h
  bondFunctions.h
  box.h
  braggReflection.h
  cell.h
  cellArray.h
  cellDistributor.h
  changeData.h
  changeStore.h
  configuration.h
  coreData.h
  dataSource.h
  distributor.h
  empiricalFormula.h
  interactionPotential.h
  isotopeData.h
  isotopologue.h
  isotopologues.h
  isotopologueSet.h
  isotopologueWeight.h
  kVector.h
  localMolecule.h
  molecule.h
  moleculeDistributor.h
  neutronWeights.h
  pairPotential.h
  pairPotentialOverride.h
  potentialMap.h
  partialSet.h
  partialSetAccumulator.h
  region.h
  regionalDistributor.h
  scatteringMatrix.h
  shortRangeFunctions.h
  site.h
  siteReference.h
  siteStack.h
  species.h
  speciesAngle.h
  speciesAtom.h
  speciesBond.h
  speciesImproper.h
  speciesIntra.h
  speciesRing.h
  speciesSite.h
  speciesSiteInstance.h
  speciesTorsion.h
  torsionFunctions.h
  valueStore.h
  xRayWeights.h
)

target_include_directories(classes PRIVATE ${PROJECT_SOURCE_DIR}/src)

target_link_libraries(classes PUBLIC base)
